# substrate-contracts-node

node/: Cargo.toml
runtime/: Cargo.toml
