[package]
name = "contracts-node"
version = "0.3.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node configured for smart contracts via `pallet-contracts`."
edition = "2021"
license = "Unlicense"
build = "build.rs"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "substrate-contracts-node"
path = "src/main.rs"

[dependencies]
structopt = "0.3.25"

sc-cli = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-cli", features = ["wasmtime"] }
sp-core = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-core" }
sc-executor = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-executor", features = ["wasmtime"] }
sc-service = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-service", features = ["wasmtime"] }
sc-telemetry = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-telemetry" }
sc-keystore = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-keystore" }
sp-inherents = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-inherents" }
sc-transaction-pool = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool" }
sc-transaction-pool-api = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool-api" }
sc-consensus-aura = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-consensus-aura" }
sp-consensus-aura = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-consensus-aura" }
sp-consensus = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-consensus" }
sc-consensus = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-consensus" }
sc-finality-grandpa = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-finality-grandpa" }
sp-finality-grandpa = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-finality-grandpa" }
sc-client-api = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-client-api" }
sp-runtime = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-runtime" }
sp-timestamp = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-timestamp" }

# These dependencies are used for the node's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-rpc" }
sp-api = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-api" }
sc-rpc-api = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-rpc-api" }
sp-blockchain = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-blockchain" }
sp-block-builder = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-block-builder" }
sc-basic-authorship = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sc-basic-authorship" }
substrate-frame-rpc-system = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "substrate-frame-rpc-system" }
pallet-transaction-payment-rpc = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment-rpc" }
pallet-contracts-rpc = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "frame-benchmarking" }
frame-benchmarking-cli = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "frame-benchmarking-cli" }

contracts-node-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "substrate-build-script-utils" }

[features]
default = []
runtime-benchmarks = [
	"contracts-node-runtime/runtime-benchmarks",
]
