[package]
name = "contracts-node-runtime"
version = "0.3.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

pallet-aura = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-aura", default-features = false }
pallet-balances = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false }
frame-support = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
pallet-grandpa = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-grandpa", default-features = false }
pallet-randomness-collective-flip = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-randomness-collective-flip", default-features = false }
pallet-sudo = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-sudo", default-features = false }
frame-system = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
pallet-timestamp = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-timestamp", default-features = false }
pallet-transaction-payment = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment", default-features = false }
frame-executive = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "frame-executive", default-features = false }
sp-api = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false }
sp-block-builder = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-block-builder", default-features = false }
sp-consensus-aura = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-consensus-aura", default-features = false }
sp-core = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
sp-inherents = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-inherents", default-features = false }
sp-offchain = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-offchain", default-features = false }
sp-runtime = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
sp-session = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-session", default-features = false }
sp-std = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }
sp-transaction-pool = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-transaction-pool", default-features = false }
sp-version = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "sp-version", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "frame-system-rpc-runtime-api", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment-rpc-runtime-api", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", default-features = false, package = "frame-benchmarking", optional = true }
frame-system-benchmarking = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", default-features = false, package = "frame-system-benchmarking", optional = true }
hex-literal = { version = "0.3.4", optional = true }

# Contracts specific packages
pallet-contracts = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false }
pallet-contracts-primitives = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false }
pallet-contracts-rpc-runtime-api = { tag = "monthly-2021-12", git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc-runtime-api", default-features = false }

[build-dependencies]
substrate-wasm-builder =  { git = "https://github.com/paritytech/substrate", package = "substrate-wasm-builder" }

[features]
default = [
	"std",
	# temporarily enable unstable contracts features by default, remove this before using on a production chain.
	"contracts-unstable-interface",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = [
	"pallet-contracts/unstable-interface"
]
